<package format="3">
  <name>rasprover_autonomy</name>
  <version>0.1.0</version>
  <description>Autonomous rover using ROS 2 and PX4</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>
</package>
