<?xml version="1.0"?>
<package format="3">
  <name>rasprover_autonomy</name>
  <version>0.1.0</version>
  <description>ROS 2 Jazzy autonomous rover package for RaspRover (Pixhawk PX4, MAVROS, Pure Pursuit, sensor fusion)</description>
  <maintainer email="nsahir04@gmail.com">Neel Ahir</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>mavros_extras</exec_depend>

  <!-- Include MAVROS message dependencies (if needed) -->
  <exec_depend>mavros_msgs</exec_depend>

</package>

